# feiniao-downloader

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.github/workflows/: build.yml
prototype/: v2.html  v3-minimal.html  v4-workstation.html  v5.html
scripts/: gen_icon.py
src/: App.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  proxy.rs  state.rs  types.rs  ytdlp.rs
src/components/: status-banner.tsx  titlebar.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  select.tsx  sheet.tsx  switch.tsx  tabs.tsx
src/lib/: tauri.ts  utils.ts
src/pages/: home.tsx  settings.tsx
src/store/: app.ts
src/styles/: globals.css
website/: wrangler.toml
