[package]
name = "feiniao-downloader"
version = "1.3.1"
description = "飞鸟下载器 — 基于 yt-dlp 的 macOS 下载工具"
authors = ["yorushika"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "feiniao_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
which = "6"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
once_cell = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
dirs = "5"
url = "2"
anyhow = "1"
parking_lot = "0.12"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
